--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcUuDEdxI9mrXZn+qgvn9p",
+      "authorship_tag": "ABX9TyPvI0mFZTFa4ojypf3KIPB3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,30 +43,65 @@
         "import scipy\n",
         "from scipy import stats\n",
         "\n",
-        "def confidence_interval_individual_values(AUC_values, predicted_AUC_values, \n",
+        "def confidence_interval_individual_values(observations, predictions, \n",
         "                                          alpha=0.1):\n",
-        "    if len(AUC_values) != len(predicted_AUC_values):\n",
+        "    \"\"\"This function calculates a confidence interval using the individual\n",
+        "    predictions.\n",
+        "\n",
+        "    For details on the reasoning behind the interval, please see our \n",
+        "    paper: ....\n",
+        "\n",
+        "    Arguments:\n",
+        "      observations: An array containing the individual observations\n",
+        "      predictions: An array containing the individual predictions\n",
+        "      alpha: A float that determines the significance of the confidence interval.\n",
+        "        The significance is (1-alpha/2)*100%.\n",
+        "    \n",
+        "    Return:\n",
+        "      None \n",
+        "    \"\"\"\n",
+        "    # Some preliminary checks\n",
+        "    if len(observations) != len(predictions):\n",
         "      print('different number of predictions and observations')\n",
         "      return\n",
         "    if alpha > 1:\n",
         "      print('alpha cannot be larger than 1. For a 90% confidence interval, use alpha=0.1')\n",
-        "    z_values = np.log(predicted_AUC_values) - np.log(AUC_values)\n",
-        "    N = len(z_values)\n",
-        "    var = np.var(z_values)\n",
-        "    average = np.mean(z_values)\n",
+        "    # Convert to logscale\n",
+        "    error_values = np.log(predictions) - np.log(observations)\n",
+        "\n",
+        "    # Calcualte a CI on logscale for the mean of the error\n",
+        "    N = len(error_values)\n",
+        "    var = np.var(error_values)\n",
+        "    average = np.mean(error_values)\n",
         "    t = scipy.stats.t(N-1).ppf(1-alpha/2)\n",
         "    loglowerbound = average - t * np.sqrt(var / N)\n",
         "    logupperbound = average + t * np.sqrt(var / N)\n",
+        "\n",
+        "    # Convert the CI back to the original scale\n",
         "    CI = [np.exp(loglowerbound), np.exp(logupperbound)]\n",
+        "\n",
+        "    # Print the result\n",
         "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n",
         "\n",
-        "def confidence_interval(GM_observed, GM_predicted, CV, N, alpha=0.1):\n",
-        "    \"\"\"CV must be the geometric coefficient of variation\"\"\"\n",
-        "    if CV>1:\n",
-        "      print('The coefficient of variation cannot exceed 1')\n",
-        "      return\n",
+        "def confidence_interval(GM_observed, GM_predicted, GCV, N, alpha=0.1):\n",
+        "    \"\"\"This function calculates a confidence interval using the observed\n",
+        "       geometric mean, the predicted geometric mean, and the coefficient\n",
+        "       of variation.\n",
+        "\n",
+        "    Arguments: \n",
+        "      GM_observed (float): The geometric mean of the observations\n",
+        "      GM_predicted (float): The geometric mean of the predictions\n",
+        "      GCV (float): The geometric coefficient of variation. Note that values are\n",
+        "        often reported as percentiles in literature. If 70% is reported, use 0.7.\n",
+        "      N (int): The number of observations.\n",
+        "      alpha (float): Determines the significance of the confidence interval.\n",
+        "        The significance is (1-alpha/2)*100%.\n",
+        "    \n",
+        "    Return:\n",
+        "      None\n",
+        "    \"\"\"\n",
         "    average = np.log(GM_observed)\n",
-        "    var = np.log(CV**2 + 1)\n",
+        "    var = np.log(GCV**2 + 1)\n",
         "    t = scipy.stats.t(N-1).ppf(1-alpha/2)\n",
         "    loglowerbound = average + t * np.sqrt(var / N)\n",
         "    logupperbound = average - t * np.sqrt(var / N)\n",
@@ -74,10 +109,9 @@
         "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "EPDAGOEH9VBo"
       },
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -106,6 +140,7 @@
         "                                     125,\n",
         "                                     170,\n",
         "                                     125,\n",
+        "                                     130\n",
         "])\n",
         "\n",
         "confidence_interval_individual_values(hypothetical_observations, \n",
@@ -117,15 +152,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGbGUp6w-sEq",
-        "outputId": "9964c3fe-f912-41e1-a7fd-256445d06c7f"
+        "outputId": "59f674a6-477b-42e3-e600-b11f1267b92b"
       },
-      "execution_count": 27,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "different number of predictions and observations\n"
+            "90.0% confidence interval: [0.9080389449267313, 1.0711936588331088]\n"
           ]
         }
       ]
@@ -142,7 +177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Quite often, only the geometric mean and coefficient of variation are published and not the individual AUC values. In this case the first approach is not possible and the second approach must be used."
+        "Quite often, only the geometric mean and coefficient of variation are published and not the individual AUC values. In this case, the first approach is not possible and the second approach must be used."
       ],
       "metadata": {
         "id": "SakMDp7n8WMn"
@@ -152,7 +187,7 @@
       "cell_type": "code",
       "source": [
         "hypothetical_observed_GM = 120\n",
-        "hypothetical_predicted_GM = 110\n",
+        "hypothetical_predicted_GM = 120\n",
         "hypothetical_CV = 0.4 # N.B. this value should be between 0 and 1, not between 0 and 100!\n",
         "Number_of_subjects = 20\n",
         "confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM, \n",
@@ -163,15 +198,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tykg_Kuf8-yZ",
-        "outputId": "747d7436-ccd1-4faa-de71-019c02eb2529"
+        "outputId": "82635dbf-85a6-4ab8-d206-be97ba960d5d"
       },
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "90.0% confidence interval: [0.789806013057465, 1.0639040015977201]\n"
+            "90.0% confidence interval: [0.8616065596990528, 1.1606225471975127]\n"
           ]
         }
       ]
