--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvI0mFZTFa4ojypf3KIPB3",
+      "authorship_tag": "ABX9TyOEMD/2zd9zTGbUzSTttY5y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "EPDAGOEH9VBo"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
         "id": "IGbGUp6w-sEq",
         "outputId": "59f674a6-477b-42e3-e600-b11f1267b92b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
       "source": [
         "hypothetical_observed_GM = 120\n",
         "hypothetical_predicted_GM = 120\n",
-        "hypothetical_CV = 0.4 # N.B. this value should be between 0 and 1, not between 0 and 100!\n",
+        "hypothetical_CV = 0.4 # N.B. 40% should be entered as 0.4\n",
         "Number_of_subjects = 20\n",
         "confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM, \n",
         "                    hypothetical_CV, N=Number_of_subjects, alpha=0.1)"
@@ -200,7 +200,7 @@
         "id": "tykg_Kuf8-yZ",
         "outputId": "82635dbf-85a6-4ab8-d206-be97ba960d5d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
