Updated text and moved the code into a module

--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEMD/2zd9zTGbUzSTttY5y",
+      "authorship_tag": "ABX9TyM+rUzfFw6PrrXapeTe/YuY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This colab contains all the necessary code in order to calcualte a confidence interval for a geometric mean ratio as is advocated in (insert name paper). "
+        "This colab contains all the necessary code in order to calcualte a confidence interval for a geometric mean ratio as is advocated in our paper  \"*Towards more RobustEvaluation of the Predictive Performance of Physiologically Based Pharmacokinetic Models: using Confidence Intervals to support use of Model-informed Dosing in Clinical Care*\", which is currently under review."
       ],
       "metadata": {
         "id": "O4CFt2EiA6C7"
@@ -38,17 +38,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Make sure to run this first\n",
+        "#@title The code that is used ot create the intervals\n",
         "import numpy as np\n",
         "import scipy\n",
         "from scipy import stats\n",
         "\n",
-        "def confidence_interval_individual_values(observations, predictions, \n",
+        "def confidence_interval_individual_values(observations, predictions,\n",
         "                                          alpha=0.1):\n",
         "    \"\"\"This function calculates a confidence interval using the individual\n",
         "    predictions.\n",
         "\n",
-        "    For details on the reasoning behind the interval, please see our \n",
+        "    For details on the reasoning behind the interval, please see our\n",
         "    paper: ....\n",
         "\n",
         "    Arguments:\n",
@@ -56,9 +56,9 @@
         "      predictions: An array containing the individual predictions\n",
         "      alpha: A float that determines the significance of the confidence interval.\n",
         "        The significance is (1-alpha/2)*100%.\n",
-        "    \n",
+        "\n",
         "    Return:\n",
-        "      None \n",
+        "      None\n",
         "    \"\"\"\n",
         "    # Some preliminary checks\n",
         "    if len(observations) != len(predictions):\n",
@@ -88,7 +88,7 @@
         "       geometric mean, the predicted geometric mean, and the coefficient\n",
         "       of variation.\n",
         "\n",
-        "    Arguments: \n",
+        "    Arguments:\n",
         "      GM_observed (float): The geometric mean of the observations\n",
         "      GM_predicted (float): The geometric mean of the predictions\n",
         "      GCV (float): The geometric coefficient of variation. Note that values are\n",
@@ -96,7 +96,7 @@
         "      N (int): The number of observations.\n",
         "      alpha (float): Determines the significance of the confidence interval.\n",
         "        The significance is (1-alpha/2)*100%.\n",
-        "    \n",
+        "\n",
         "    Return:\n",
         "      None\n",
         "    \"\"\"\n",
@@ -109,17 +109,27 @@
         "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n"
       ],
       "metadata": {
-        "id": "EPDAGOEH9VBo"
+        "id": "EPDAGOEH9VBo",
+        "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The implementation of the code is give in the code block above. The some code can be found in the module CIs.py in the Confidence_intervals_code folder. The examples that follow load the code from that module. There is no need to run the code manually first."
+      ],
+      "metadata": {
+        "id": "tOubSX306qqT"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
         "## Example when individual observations and predictions are available\n",
         "\n",
-        "The cell below illustrates how a confidence interval can be created using individual observations and predicitons. The hypothetical values can be replaced by relevant values. By default, a 90% confidence interval is given. To get, for instance, a 95% percent confidence interval, change alpha to 0.05.\n"
+        "The cell below illustrates how a confidence interval can be created using individual observations and predicitons. The hypothetical values can be replaced by relevant values. By default, a 90% confidence interval is given. To get, for instance, a 95% confidence interval, change alpha to 0.05.\n"
       ],
       "metadata": {
         "id": "u-xLvF5G-pUB"
@@ -128,22 +138,25 @@
     {
       "cell_type": "code",
       "source": [
-        "hypothetical_observations = np.array([132,\n",
-        "                                      111,\n",
-        "                                      120,\n",
-        "                                      190,\n",
-        "                                      115,\n",
-        "                                      130])\n",
+        "from CIs import confidence_interval_individual_values\n",
         "\n",
-        "hypothetical_predictions = np.array([110,\n",
-        "                                     121,\n",
-        "                                     125,\n",
-        "                                     170,\n",
-        "                                     125,\n",
-        "                                     130\n",
-        "])\n",
+        "hypothetical_observations = [132,\n",
+        "                             111,\n",
+        "                             120,\n",
+        "                             190,\n",
+        "                             115,\n",
+        "                             130,\n",
+        "                             ]\n",
         "\n",
-        "confidence_interval_individual_values(hypothetical_observations, \n",
+        "hypothetical_predictions = [110,\n",
+        "                            121,\n",
+        "                            125,\n",
+        "                            170,\n",
+        "                            125,\n",
+        "                            130,\n",
+        "                            ]\n",
+        "\n",
+        "confidence_interval_individual_values(hypothetical_observations,\n",
         "                                      hypothetical_predictions,\n",
         "                                      alpha=0.1)\n"
       ],
@@ -152,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGbGUp6w-sEq",
-        "outputId": "59f674a6-477b-42e3-e600-b11f1267b92b"
+        "outputId": "911a689b-3758-408e-d2d4-79899522729e"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,11 +199,12 @@
     {
       "cell_type": "code",
       "source": [
+        "from CIs import confidence_interval\n",
         "hypothetical_observed_GM = 120\n",
         "hypothetical_predicted_GM = 120\n",
-        "hypothetical_CV = 0.4 # N.B. 40% should be entered as 0.4\n",
+        "hypothetical_CV = 0.4 # N.B. 40% should be entered as 0.4!\n",
         "Number_of_subjects = 20\n",
-        "confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM, \n",
+        "confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM,\n",
         "                    hypothetical_CV, N=Number_of_subjects, alpha=0.1)"
       ],
       "metadata": {
@@ -198,7 +212,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tykg_Kuf8-yZ",
-        "outputId": "82635dbf-85a6-4ab8-d206-be97ba960d5d"
+        "outputId": "2bd71c67-7719-4f84-c25b-e3a403d925b6"
       },
       "execution_count": null,
       "outputs": [
