Updated text and added try/except

--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+rUzfFw6PrrXapeTe/YuY",
+      "authorship_tag": "ABX9TyPKAJOIfJ0BmAqYIRJY7JeQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title The code that is used ot create the intervals\n",
+        "#@title Run this first: The code that is used ot create the intervals.\n",
         "import numpy as np\n",
         "import scipy\n",
         "from scipy import stats\n",
@@ -112,13 +112,13 @@
         "id": "EPDAGOEH9VBo",
         "cellView": "form"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The implementation of the code is give in the code block above. The some code can be found in the module CIs.py in the Confidence_intervals_code folder. The examples that follow load the code from that module. There is no need to run the code manually first."
+        "The implementation of the code is give in the code block above. This code must be run first in order to define the relevant functions. The blocks below can thereafter be used to obtain the confidence intervals using either the individual observations or the geometric mean and geometric coefficient of variation."
       ],
       "metadata": {
         "id": "tOubSX306qqT"
@@ -138,8 +138,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from CIs import confidence_interval_individual_values\n",
-        "\n",
         "hypothetical_observations = [132,\n",
         "                             111,\n",
         "                             120,\n",
@@ -156,18 +154,21 @@
         "                            130,\n",
         "                            ]\n",
         "\n",
-        "confidence_interval_individual_values(hypothetical_observations,\n",
+        "try:\n",
+        "  confidence_interval_individual_values(hypothetical_observations,\n",
         "                                      hypothetical_predictions,\n",
-        "                                      alpha=0.1)\n"
+        "                                      alpha=0.1)\n",
+        "except NameError:\n",
+        "  print(\"Run the code block above first to load the relevant functions\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGbGUp6w-sEq",
-        "outputId": "911a689b-3758-408e-d2d4-79899522729e"
+        "outputId": "eef6f7ed-05a0-4740-c456-448c6f866f41"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,22 +200,25 @@
     {
       "cell_type": "code",
       "source": [
-        "from CIs import confidence_interval\n",
         "hypothetical_observed_GM = 120\n",
         "hypothetical_predicted_GM = 120\n",
         "hypothetical_CV = 0.4 # N.B. 40% should be entered as 0.4!\n",
         "Number_of_subjects = 20\n",
-        "confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM,\n",
-        "                    hypothetical_CV, N=Number_of_subjects, alpha=0.1)"
+        "\n",
+        "try:\n",
+        "  confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM,\n",
+        "                      hypothetical_CV, N=Number_of_subjects, alpha=0.1)\n",
+        "except NameError:\n",
+        "  print(\"Run the code block above first to load the relevant functions\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tykg_Kuf8-yZ",
-        "outputId": "2bd71c67-7719-4f84-c25b-e3a403d925b6"
+        "outputId": "96895ad8-ec83-48fc-c5c1-ff854f1cc742"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
