Minor text improvements

--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKAJOIfJ0BmAqYIRJY7JeQ",
+      "authorship_tag": "ABX9TyMN2tz2yVIUirLPfGa2iJgd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Run this first: The code that is used ot create the intervals.\n",
+        "#@title The code that is used ot create the intervals\n",
         "import numpy as np\n",
         "import scipy\n",
         "from scipy import stats\n",
@@ -112,13 +112,13 @@
         "id": "EPDAGOEH9VBo",
         "cellView": "form"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The implementation of the code is give in the code block above. This code must be run first in order to define the relevant functions. The blocks below can thereafter be used to obtain the confidence intervals using either the individual observations or the geometric mean and geometric coefficient of variation."
+        "The implementation of the code is give in the code block above. The some code can be found in the module CIs.py in the Confidence_intervals_code folder. The examples that follow load the code from that module. There is no need to run the code manually first."
       ],
       "metadata": {
         "id": "tOubSX306qqT"
@@ -159,16 +159,16 @@
         "                                      hypothetical_predictions,\n",
         "                                      alpha=0.1)\n",
         "except NameError:\n",
-        "  print(\"Run the code block above first to load the relevant functions\")\n"
+        "  print('Run the first code block first to load the necessary functions.')\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGbGUp6w-sEq",
-        "outputId": "eef6f7ed-05a0-4740-c456-448c6f866f41"
+        "outputId": "c7602147-feb5-4e53-ec80-3fb3681d40f9"
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Quite often, only the geometric mean and coefficient of variation are published and not the individual AUC values. In this case, the first approach is not possible and the second approach must be used."
+        "Typically, only the geometric mean and coefficient of variation are published and not the individual AUC values. In this case, the first approach is not possible and the second approach must be used."
       ],
       "metadata": {
         "id": "SakMDp7n8WMn"
@@ -207,24 +207,25 @@
         "\n",
         "try:\n",
         "  confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM,\n",
-        "                      hypothetical_CV, N=Number_of_subjects, alpha=0.1)\n",
+        "                    hypothetical_CV, N=Number_of_subjects, alpha=0.1)\n",
+        "\n",
         "except NameError:\n",
-        "  print(\"Run the code block above first to load the relevant functions\")"
+        "  print('Run the first code block first to load the necessary functions.')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tykg_Kuf8-yZ",
-        "outputId": "96895ad8-ec83-48fc-c5c1-ff854f1cc742"
+        "outputId": "6a4ac782-9e96-4240-9c99-5477759ff473"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "90.0% confidence interval: [0.8616065596990528, 1.1606225471975127]\n"
+            "Run the first code block first to load the necessary functions\n"
           ]
         }
       ]
