Added group level approach for smaller simulations. Changed text to match paper.

--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMN2tz2yVIUirLPfGa2iJgd",
+      "authorship_tag": "ABX9TyNbo9+CSrm1jDiIe+pOYp2j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,18 +38,19 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title The code that is used ot create the intervals\n",
+        "#@title The code that is used ot create the intervals (run this first).\n",
         "import numpy as np\n",
         "import scipy\n",
         "from scipy import stats\n",
         "\n",
-        "def confidence_interval_individual_values(observations, predictions,\n",
+        "def CI_I_LD(observations, predictions,\n",
         "                                          alpha=0.1):\n",
         "    \"\"\"This function calculates a confidence interval using the individual\n",
         "    predictions.\n",
         "\n",
-        "    For details on the reasoning behind the interval, please see our\n",
-        "    paper: ....\n",
+        "    The interval is calculated on logscale using two paired t-tests and then\n",
+        "    transformed back to the original scale. For more details on the reasoning\n",
+        "    behind the interval, please see our paper: ....\n",
         "\n",
         "    Arguments:\n",
         "      observations: An array containing the individual observations\n",
@@ -81,9 +82,11 @@
         "    CI = [np.exp(loglowerbound), np.exp(logupperbound)]\n",
         "\n",
         "    # Print the result\n",
+        "    print(f'GM-ratio: {np.exp(np.mean(error_values))}')\n",
         "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n",
         "\n",
-        "def confidence_interval(GM_observed, GM_predicted, GCV, N, alpha=0.1):\n",
+        "\n",
+        "def CI_G_LD(GM_observed, GM_predicted, GCV_observed, N, alpha=0.1):\n",
         "    \"\"\"This function calculates a confidence interval using the observed\n",
         "       geometric mean, the predicted geometric mean, and the coefficient\n",
         "       of variation.\n",
@@ -91,7 +94,7 @@
         "    Arguments:\n",
         "      GM_observed (float): The geometric mean of the observations\n",
         "      GM_predicted (float): The geometric mean of the predictions\n",
-        "      GCV (float): The geometric coefficient of variation. Note that values are\n",
+        "      GCV_observed (float): The geometric coefficient of variation. Note that values are\n",
         "        often reported as percentiles in literature. If 70% is reported, use 0.7.\n",
         "      N (int): The number of observations.\n",
         "      alpha (float): Determines the significance of the confidence interval.\n",
@@ -101,24 +104,64 @@
         "      None\n",
         "    \"\"\"\n",
         "    average = np.log(GM_observed)\n",
-        "    var = np.log(GCV**2 + 1)\n",
+        "    var = np.log(GCV_observed**2 + 1)\n",
         "    t = scipy.stats.t(N-1).ppf(1-alpha/2)\n",
         "    loglowerbound = average + t * np.sqrt(var / N)\n",
         "    logupperbound = average - t * np.sqrt(var / N)\n",
         "    CI = [GM_predicted / np.exp(loglowerbound), GM_predicted / np.exp(logupperbound)]\n",
+        "    print(f'GM-ratio: {GM_predicted / GM_observed}')\n",
+        "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n",
+        "\n",
+        "def CI_G_LD_small(GM_observed, GM_predicted, GCV_observed, GCV_predicted,\n",
+        "                  N_observed, N_predicted, alpha=0.1):\n",
+        "    \"\"\"\n",
+        "    Calculate CI using the GLM approach and considering variance of predictions.\n",
+        "\n",
+        "    This function calculates a CI of the difference in means on logscale and\n",
+        "    then transform this back to the original scale. A 2-sided unpaired\n",
+        "    t-test assuming unequal variances is used.\n",
+        "\n",
+        "    Arguments:\n",
+        "        GM_observed: Observed geometric mean\n",
+        "        GM_predicted: Predicted geometric mean\n",
+        "        GCV_observed: Observed geometric coefficient of variation\n",
+        "        GCV_predicted: Predicted geometric coefficient of variation\n",
+        "        N_observed: Number of observed subjects\n",
+        "        N_predicted: Number of predicted subjects\n",
+        "        alpha: Confidence level. The defaul value of 0.1 corresponds to 90% CI.\n",
+        "\n",
+        "    Returns:\n",
+        "        CI: The (1-alpha)*100% confidence interval.\n",
+        "    \"\"\"\n",
+        "    if type(N_observed) != int:\n",
+        "      raise ValueError('N_observed must be an integer, do not use dots.')\n",
+        "    if type(N_predicted) != int:\n",
+        "      raise ValueError('N_observed must be an integer, do use dots.')\n",
+        "    average_observed = np.log(GM_observed)\n",
+        "    average_predicted = np.log(GM_predicted)\n",
+        "    var_observed = np.log(GCV_observed**2 + 1)\n",
+        "    var_predicted = np.log(GCV_predicted**2 + 1)\n",
+        "    var_total = var_observed / N_observed + var_predicted / N_predicted\n",
+        "    df = (var_observed / N_observed + var_predicted / N_predicted)**2 \\\n",
+        "     / ((var_observed / N_observed)**2 / (N_observed - 1) + (var_predicted / N_predicted)**2 / (N_predicted - 1))\n",
+        "    t = scipy.stats.t(df).ppf(1-alpha/2)\n",
+        "    loglowerbound = average_predicted - average_observed - t * np.sqrt(var_total)\n",
+        "    logupperbound = average_predicted - average_observed + t * np.sqrt(var_total)\n",
+        "    CI = [np.exp(loglowerbound), np.exp(logupperbound)]\n",
+        "    print(f'GM-ratio: {GM_predicted / GM_observed}')\n",
         "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n"
       ],
       "metadata": {
         "id": "EPDAGOEH9VBo",
         "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The implementation of the code is give in the code block above. The some code can be found in the module CIs.py in the Confidence_intervals_code folder. The examples that follow load the code from that module. There is no need to run the code manually first."
+        "The implementation of the code is give in the code block above. The above code block must be run first"
       ],
       "metadata": {
         "id": "tOubSX306qqT"
@@ -127,7 +170,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Example when individual observations and predictions are available\n",
+        "## I-LD Approach: When individual level data is available\n",
         "\n",
         "The cell below illustrates how a confidence interval can be created using individual observations and predicitons. The hypothetical values can be replaced by relevant values. By default, a 90% confidence interval is given. To get, for instance, a 95% confidence interval, change alpha to 0.05.\n"
       ],
@@ -138,26 +181,24 @@
     {
       "cell_type": "code",
       "source": [
-        "hypothetical_observations = [132,\n",
-        "                             111,\n",
-        "                             120,\n",
-        "                             190,\n",
-        "                             115,\n",
-        "                             130,\n",
-        "                             ]\n",
+        "observations = [132,\n",
+        "                111,\n",
+        "                120,\n",
+        "                190,\n",
+        "                115,\n",
+        "                130,\n",
+        "                ]\n",
         "\n",
-        "hypothetical_predictions = [110,\n",
-        "                            121,\n",
-        "                            125,\n",
-        "                            170,\n",
-        "                            125,\n",
-        "                            130,\n",
-        "                            ]\n",
+        "predictions = [110,\n",
+        "               121,\n",
+        "               125,\n",
+        "               170,\n",
+        "               125,\n",
+        "               130,\n",
+        "               ]\n",
         "\n",
         "try:\n",
-        "  confidence_interval_individual_values(hypothetical_observations,\n",
-        "                                      hypothetical_predictions,\n",
-        "                                      alpha=0.1)\n",
+        "  CI_I_LD(observations, predictions, alpha=0.1)\n",
         "except NameError:\n",
         "  print('Run the first code block first to load the necessary functions.')\n"
       ],
@@ -166,14 +207,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGbGUp6w-sEq",
-        "outputId": "c7602147-feb5-4e53-ec80-3fb3681d40f9"
+        "outputId": "983c2f98-b546-4839-8dba-9c270cb7ddd3"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "GM-ratio: 0.9862482242209722\n",
             "90.0% confidence interval: [0.9080389449267313, 1.0711936588331088]\n"
           ]
         }
@@ -182,7 +224,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Example second approach"
+        "# G-LD appraoch large simulation"
       ],
       "metadata": {
         "id": "kktp5Xtn7pNh"
@@ -200,14 +242,13 @@
     {
       "cell_type": "code",
       "source": [
-        "hypothetical_observed_GM = 120\n",
-        "hypothetical_predicted_GM = 120\n",
-        "hypothetical_CV = 0.4 # N.B. 40% should be entered as 0.4!\n",
+        "GM_observed = 120\n",
+        "GM_predicted = 120\n",
+        "GCV_observed = 0.4 # N.B. 40% should be entered as 0.4!\n",
         "Number_of_subjects = 20\n",
         "\n",
         "try:\n",
-        "  confidence_interval(hypothetical_observed_GM, hypothetical_predicted_GM,\n",
-        "                    hypothetical_CV, N=Number_of_subjects, alpha=0.1)\n",
+        "  CI_G_LD(GM_observed, GM_predicted, GCV_observed, N=Number_of_subjects, alpha=0.1)\n",
         "\n",
         "except NameError:\n",
         "  print('Run the first code block first to load the necessary functions.')"
@@ -217,15 +258,67 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tykg_Kuf8-yZ",
-        "outputId": "6a4ac782-9e96-4240-9c99-5477759ff473"
+        "outputId": "245ae3d7-923c-4ed5-ce1f-de2106d42eed"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Run the first code block first to load the necessary functions\n"
+            "GM-ratio: 1.0\n",
+            "90.0% confidence interval: [0.8616065596990528, 1.1606225471975127]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# G-LD approach small simulation"
+      ],
+      "metadata": {
+        "id": "6HLhesPEBnLd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If, due to computational constraints, it is infeasible to create a large simulation, the variance of the predictions can no longer be ignored. In this case, the following function should be used. Note that in this example, the interval is slightly wider than in the previous example since we only used 100 predictions. If we set N_predicted to 10.000, we a practically identical interval."
+      ],
+      "metadata": {
+        "id": "saQGC8VzBrbO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GM_observed = 120\n",
+        "GM_predicted = 120\n",
+        "GCV_observed = 0.4 # N.B. 40% should be entered as 0.4!\n",
+        "GCV_predicted = 0.8\n",
+        "N_observed = 20\n",
+        "N_predicted = 100\n",
+        "\n",
+        "\n",
+        "CI_G_LD_small(GM_observed=GM_observed, GM_predicted=GM_predicted, GCV_observed=GCV_observed,\n",
+        "              GCV_predicted=GCV_predicted, N_observed=N_observed, N_predicted=N_predicted, alpha=0.1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-Bh28oFUBbc6",
+        "outputId": "d7bdb108-98ae-4c59-e417-3c29837d5092"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GM-ratio: 1.0\n",
+            "90.0% confidence interval: [0.8298759846566229, 1.204999323379347]\n"
           ]
         }
       ]
